# json-to-dts-example

./: .bazelrc  .gitignore  README.md  WORKSPACE  package.json
src/: BUILD.bazel  main.ts  tsconfig.json
